# very-slow-movie-player

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  google_client.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties  vsmp.service  youtube-dl.conf  youtube.py
.github/workflows/: ci_deployment.yml
epd/: __init__.py  epdconfig.py
ffmpeg/: README.md
service/: install.sh  vsmp.service
src/: main.py  youtube.py
very_slow_movie_player/: main.py  youtube.py
very_slow_movie_player/utils/: __init__.py  const.py
very_slow_movie_player/utils/epd/: __init__.py  epd7in5_v2.py  epdconfig.py
