[tool.poetry]
name = "very-slow-movie-player"
version = "0.1.0"
description = ""
authors = ["Will Garside <worgarside@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"rpi.gpio" = { platform = "linux", version = "*" }
pillow = "*"
spidev = { platform = "linux", version = "*" }
ffmpeg-python = "*"
youtube-dl = "*"
python-dotenv = "*"
requests = "*"
google-auth-oauthlib = "*"
boto3 = "*"
python-dateutil = { platform = "linux", version = "*" }
wg-utilities = { extras = ["clients", "epd", "exceptions"], version = "*" }
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "==22.10.0"
pylint = "*"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | Pipfile\.lock
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = ["_local_sandbox"]
show_error_codes = true
plugins = 'pydantic.mypy'
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.codespell]
skip = '*.json,*.csv,*.xml,*.lock'

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pycln]
path = "*"
expand_stars = true
all = true
no_gitignore = false

[tool.ruff]
# Longer line length to avoid throwing errors in case where black doesn't
# wraps the lines (e.g. a long URL).
line-length = 120
select = [
  # https://github.com/charliermarsh/ruff#supported-rules
  "B",   # Flake8 bugbear
  "C4",  # Flake8 comprehensions
  "E",   # Pycodestyle errors
  "ERA", # Eradicate commented out code
  "F",   # Pyflakes
  "N",   # PEP8 Naming
  "RUF", # Ruff-specific rules
  "UP",  # PyUpgrade
  "W",   # Pycodestyle warnings
]
ignore = [
  "D107",  # public-init
  "D202",  # no-blank-line-after-function
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
  "D400",  # first-line-end-with-period
  "D406",  # new-line-after-section-name
  "D407",  # dashed-underline-after-section
  "UP037", # quoted-annotation
]
