[tool.poetry]
name = "very-slow-movie-player"
version = "1.0.3"
description = ""
authors = ["Will Garside <worgarside@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
"rpi.gpio" = { platform = "linux", version = "*" }
pillow = "*"
spidev = { platform = "linux", version = "*" }
ffmpeg-python = "*"
youtube-dl = "*"
python-dotenv = "*"
requests = "*"
google-auth-oauthlib = "*"
python-dateutil = { platform = "linux", version = "*" }
wg-utilities = { extras = [
  "clients",
  "devices-epd",
  "exceptions",
], version = "^5.15.3" }
pydantic = "*"

[tool.codespell]
skip = '*.json,*.csv,*.xml,*.lock'

[tool.mypy]
ignore_missing_imports = true
exclude = ["_local_sandbox"]
show_error_codes = true
plugins = 'pydantic.mypy'
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
fix = true
line-length = 90
lint.select = ["ALL"]
lint.ignore = [
  "ANN101", # https://docs.astral.sh/ruff/rules/missing-type-function-argument/
  "D107",   # https://docs.astral.sh/ruff/rules/undocumented-public-init/
  "S314",   # https://docs.astral.sh/ruff/rules/suspicious-xml-element-tree-usage/
  "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
  "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
  "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/
  "EM",     # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "BLE",    # https://docs.astral.sh/ruff/rules/blind-except/
]

[tool.ruff.lint.pycodestyle]
max-line-length = 115

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
